# py-project-template

./: .pre-commit.yaml  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  ruff.toml
.gemini/: README.md  settings.json
.gemini/commands/: create_plan.toml  implement_plan.toml  research_codebase.toml
.github/: copilot-instructions.md  pull_request_template.md
.github/instructions/: python.instructions.md
.github/prompts/: create_plan.prompt.md  implement_plan.prompt.md  research_codebase.prompt.md
